@@ -1,5 +1,13 @@
 2015-04-06  Ola Jeppsson  <ola@adapteva.com>
 
+	* scripts/build_and_test_all.sh: Filter out apps/fft2d when
+	cross compilation is detected. It is hard to satisfy library
+	requirements.
+	Skip repeated tests when cross compilation is detected.
+	Pretty printing adjustments.
+
+2015-04-06  Ola Jeppsson  <ola@adapteva.com>
+
 	* apps/matmul-16/build.sh: Detect cross compilation and pass
 	cross compiler to make if so.
 	* apps/matmul-64/build.sh: Likewise.
